[gd_scene load_steps=10 format=3 uid="uid://dcuu86pvjwvxt"]

[ext_resource type="PackedScene" uid="uid://d0h1goenxxqid" path="res://campfire.tscn" id="1_l0rjq"]
[ext_resource type="PackedScene" uid="uid://byyxtxk5u1yrq" path="res://player.tscn" id="1_wfgnp"]
[ext_resource type="Script" path="res://campfire.gd" id="3_ynfyq"]
[ext_resource type="Script" path="res://Whoosh.gd" id="4_gimvh"]
[ext_resource type="PackedScene" uid="uid://csa3nubplyme" path="res://stick.tscn" id="4_s1628"]
[ext_resource type="Script" path="res://CampfireEvent.gd" id="5_vpnjj"]
[ext_resource type="Script" path="res://Inventory.gd" id="6_uq3tv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f1124"]
albedo_color = Color(0.0901961, 0.27451, 0.160784, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_vrprf"]
material = SubResource("StandardMaterial3D_f1124")
top_radius = 3.0
bottom_radius = 3.0
height = 1.0

[node name="Campsite" type="Node3D"]

[node name="Ground" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("CylinderMesh_vrprf")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.242007, 0.970275, 0, -0.970275, 0.242007, 0, 3.88229, 1.60809)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.270634, 0.962682, 0, -0.962682, 0.270634, 0, 1.25305, 0)

[node name="AkBank" type="AkBank" parent="."]
bank = {
"id": 1355168291,
"name": "Init"
}
load_on = 1

[node name="AkBank" type="AkBank" parent="AkBank"]
bank = {
"id": 3161908922,
"name": "Main"
}
load_on = 1

[node name="Player" parent="AkBank/AkBank" instance=ExtResource("1_wfgnp")]
transform = Transform3D(-0.684916, 0, 0.728622, 0, 1, 0, -0.728622, 0, -0.684916, 0, 0, 0)

[node name="Campfire" parent="AkBank/AkBank" instance=ExtResource("1_l0rjq")]
script = ExtResource("3_ynfyq")

[node name="Whoosh" type="AkEvent3D" parent="AkBank/AkBank/Campfire"]
event = {
"id": 3524664550,
"name": "Fire_Whoosh"
}
script = ExtResource("4_gimvh")

[node name="CampfireEvent" type="AkEvent3D" parent="AkBank/AkBank/Campfire"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.122353, 3.12009)
script = ExtResource("5_vpnjj")

[node name="Stick" parent="AkBank/AkBank" instance=ExtResource("4_s1628")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.92343, 0, 0)

[node name="Stick2" parent="AkBank/AkBank" instance=ExtResource("4_s1628")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.50545, 0, 1.31008)

[node name="Stick3" parent="AkBank/AkBank" instance=ExtResource("4_s1628")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.65877, 0, -2.46017)

[node name="Atmosphere" type="AkEvent3D" parent="AkBank/AkBank"]
event = {
"id": 4020366015,
"name": "Black_Wind"
}
trigger_on = 1

[node name="Controller" type="Node3D" parent="."]
script = ExtResource("6_uq3tv")

[connection signal="stick_added" from="AkBank/AkBank/Player" to="AkBank/AkBank/Campfire/Whoosh" method="_on_player_stick_added"]
[connection signal="fire_high" from="AkBank/AkBank/Campfire/Whoosh" to="AkBank/AkBank/Campfire/CampfireEvent" method="_on_whoosh_fire_high"]
[connection signal="fire_low" from="AkBank/AkBank/Campfire/Whoosh" to="AkBank/AkBank/Campfire/CampfireEvent" method="_on_whoosh_fire_low"]
[connection signal="fire_medium" from="AkBank/AkBank/Campfire/Whoosh" to="AkBank/AkBank/Campfire/CampfireEvent" method="_on_whoosh_fire_medium"]
